# baobab-auth-core

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml
.cursor/rules/: 00-global-workflow.mdc
.github/workflows/: ci.yml  integration.yml  release.yml
docs/: index.rst
docs/ai_workflow/: workflow.md
docs/ai_workflow/state/: dependency_graph.yaml  lock.yaml  queue.yaml
docs/api/: index.rst
docs/architecture/: index.rst
docs/architecture/adr/: 0001-architecture-hexagonale.rst  0002-value-objects-frozen-dataclass.rst  0003-ports-typing-protocol.rst  0004-fakes-dans-le-package.rst  0005-librairie-metier-pure.rst  0006-tracabilite-specs-vs-backlog.rst  0007-extension-token-provider-refresh.rst  0008-authcontext-minimal-en-0-2-0.rst  0009-rbac-authcontext-authorization-service.rst  0010-default-auth-catalog.rst  0011-role-policy-super-admin.rst  0012-change-password-revoke-all-sessions.rst  0013-error-codes-metier.rst  0014-stabilisation-contrats-publics.rst  ADR-001-architecture-hexagonale-domaine-pur.md  index.rst
docs/backlog/: README.md
docs/backlog/backlogs/: BL-010-001.md  BL-010-002.md  BL-010-003.md  BL-010-004.md  BL-010-005.md  BL-010-006.md  BL-010-007.md  BL-010-008.md  BL-020-001.md  BL-020-002.md  BL-020-003.md  BL-020-004.md  BL-020-005.md  BL-020-006.md  BL-020-007.md  BL-020-008.md  BL-020-009.md  BL-030-001.md  BL-030-002.md  BL-030-003.md  BL-030-004.md  BL-030-005.md  BL-030-006.md  BL-030-007.md  BL-030-008.md  BL-040-001.md  BL-040-002.md  BL-040-003.md  BL-040-004.md  BL-040-005.md  BL-040-006.md  BL-040-007.md  BL-040-008.md  BL-040-009.md  BL-040-010.md  BL-040-011.md  BL-040-012.md  BL-040-013.md  BL-040-014.md  BL-050-001.md  (+11 more)
docs/backlog/features/: FEAT-010.1.md  FEAT-010.2.md  FEAT-010.3.md  FEAT-010.4.md  FEAT-010.5.md  FEAT-010.6.md  FEAT-010.7.md  FEAT-010.8.md  FEAT-020.1.md  FEAT-020.2.md  FEAT-020.3.md  FEAT-020.4.md  FEAT-020.5.md  FEAT-020.6.md  FEAT-020.7.md  FEAT-020.8.md  FEAT-030.1.md  FEAT-030.2.md  FEAT-030.3.md  FEAT-030.4.md  FEAT-030.5.md  FEAT-030.6.md  FEAT-030.7.md  FEAT-030.8.md  FEAT-040.1.md  FEAT-040.2.md  FEAT-040.3.md  FEAT-040.4.md  FEAT-040.5.md  FEAT-040.6.md  FEAT-040.7.md  FEAT-040.8.md  FEAT-050.1.md  FEAT-050.2.md  FEAT-050.3.md  FEAT-050.4.md  FEAT-050.5.md  FEAT-050.6.md  FEAT-050.7.md  FEAT-050.8.md
docs/backlog/user_stories/: US-010.md  US-020.md  US-030.md  US-040.md  US-050.md
docs/contracts/: imports.md  public_api.md
docs/guides/: audit.rst  authentication.rst  catalog.rst  contracts.rst  domain_model.rst  error_codes.rst  index.rst  integration_contracts.rst  ports.rst  public_api.rst  rbac.rst  security_rules.rst  sessions.rst  testing.rst  versioning.rst
docs/integrations/: compatibility_matrix.yaml
docs/integrations/reports/: baobab-auth-core-v0.5.1__baobab-auth-database-v0.1.0.md  baobab-auth-core-v0.5.1__baobab-auth-database-v0.2.0.md  (+1 more)
docs/specifications/: index.rst
docs/workflow/: SETUP.md
scripts/: check_no_ai_attribution.py  check_traceability.py  setup_github.sh
src/baobab_auth_core/: __init__.py
tests/architecture/: test_no_infrastructure_dependencies.py
tests/fixtures/: builders.py
(+382 files in other folders)
