[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baobab-auth-core"
version = "0.3.0"
description = "Socle métier d'authentification et d'autorisation — librairie pure sans dépendances techniques."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Patrick ANDRIANAIVO" }]
keywords = ["auth", "authentication", "authorization", "domain", "core"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-auth-core"
Repository = "https://github.com/baobabgit/baobab-auth-core"
Documentation = "https://baobab-auth-core.readthedocs.io"
Issues = "https://github.com/baobabgit/baobab-auth-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baobab_auth_core"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.9",
    "mypy>=1.13",
    "bandit[toml]>=1.8",
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "nox>=2026.4.10",
    "build>=1.0",
    "twine>=6.0",
    "pre-commit>=4.0",
    "pyyaml>=6.0",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.0",
]

# --- Black : formatage -------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py313"]

# --- Ruff : lint uniquement (black gère le format) ---------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle (PEP 8)
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "D",        # pydocstyle (docstrings)
    "ANN",      # type annotations
    "RUF",      # ruff
]
ignore = [
    "D203", "D213",      # incompatibilités de style de docstring
    "D401",              # "imperative mood" : heuristique anglaise, inadaptée au français
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "N802", "N803"]
"scripts/**/*.py" = ["ANN401"]

# --- Mypy : typage strict ----------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true

# --- Pytest + couverture (≥ 95 % imposée) ------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=95"
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.\\s*$",
]

# --- Bandit : analyse de sécurité statique (SAST) ----------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
